cloudformation/shared/bastion-host.yaml
---
AWSTemplateFormatVersion: "2010-09-09"

Description:
  Create Bastion Host for access to resources in AEM Stack private subnets

Parameters:
  VpcIdParameter:
    Type: AWS::EC2::VPC::Id
    Default: vpc-2fc3014b
    Description: The VPC to create the Bastion Host in.

  AvailabilityZoneAParameter:
    Type: AWS::EC2::AvailabilityZone::Name
    Default: ap-southeast-2a
    Description: Availability Zone A

  AvailabilityZoneBParameter:
    Type: AWS::EC2::AvailabilityZone::Name
    Default: ap-southeast-2b
    Description: Availability Zone B

  BastionHostSubnetACidrBlockParameter:
    Type: String
    Default: 10.0.15.0/25
    Description: Bastion Host Subnet A Cidr Block

  BastionHostSubnetATagNameParameter:
    Type: String
    Default: Bastion Host Subnet A
    Description: Bastion Host Subnet A Name

  BastionHostSubnetBCidrBlockParameter:
    Type: String
    Default: 10.0.15.128/25
    Description: Bastion Host Subnet B Cidr Block

  BastionHostSubnetBTagNameParameter:
    Type: String
    Default: Bastion Host Subnet B
    Description: Bastion Host Subnet B Name

  BastionHostRoleNameParameter:
    Type: String
    Default: AEMStackBastionHostRole
    Description: The AEM Stack Bastion Host Role Name

  BastionHostSecurityGroupTagNameParameter:
    Type: String
    Default: Bastion Host Security Group
    Description: Bastion Host Security Group Name

  InboundFromBastionHostSecurityGroupTagNameParameter:
    Type: String
    Default: Inbound From Bastion Host Security Group
    Description: Inbound From Bastion Host Security Group Name

  SecureShellInboundCidrIpParameter:
    Type: String
    Default: 10.0.10.0/25
    Description: AEM Stack Secure Shell Inbound Cidr Ip
    
  BastionHostImageParameter:
    Type: AWS::EC2::Image::Id
    Default: ami-28cff44b
    Description: The Bastion Host Image Id

  BastionHostInstanceTypeParameter:
    Type: String
    Default: t2.micro
    Description: The Bastion Host Instance Type

  ComputeKeyPairNameParameter:
    Type: AWS::EC2::KeyPair::KeyName
    Default: aem-stack-key-pair
    Description: The Compute Resources Key Pair Name

  #TODO: Combine this parameter with AvailabilityZoneAParameter and AvailabilityZoneBParameter
  BastionHostASGAvailabilityZoneListParameter:
    Type: List<AWS::EC2::AvailabilityZone::Name>
    Default: ap-southeast-2a, ap-southeast-2b
    Description: The Bastion Host Availability Zone List

  BastionHostASGMaxSizeParameter:
    Type: String
    Default: 1
    Description: The Bastion Host Auto Scaling Group Maximum Size

  BastionHostASGMinSizeParameter:
    Type: String
    Default: 1
    Description: The Bastion Host Auto Scaling Group Minimum Size

  BastionHostTagNameParameter:
    Type: String
    Default: AEM Bastion Host
    Description: The Bastion Host Name Tag

  NetworkStackNameParameter:
    Type: String
    Default: aem-network-stack
    Description: The AEM Network Stack Name


Resources:

  BastionHostSubnetA:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone:
        Ref: AvailabilityZoneAParameter
      CidrBlock:
        Ref: BastionHostSubnetACidrBlockParameter
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value:
            Ref: BastionHostSubnetATagNameParameter
      VpcId:
        Ref: VpcIdParameter

  BastionHostSubnetB:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone:
        Ref: AvailabilityZoneBParameter
      CidrBlock:
        Ref: BastionHostSubnetBCidrBlockParameter
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value:
            Ref: BastionHostSubnetBTagNameParameter
      VpcId:
        Ref: VpcIdParameter

  BastionHostSubnetAPublicRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Fn::ImportValue: !Sub ${NetworkStackNameParameter}-PublicRouteTable
      SubnetId:
        Ref: BastionHostSubnetA

  BastionHostSubnetBPublicRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Fn::ImportValue: !Sub ${NetworkStackNameParameter}-PublicRouteTable
      SubnetId:
        Ref: BastionHostSubnetB

  BastionHostRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - ec2.amazonaws.com
            Action:
              - sts:AssumeRole
      Path: /
      Policies:
        - PolicyName: BastionHostRolePolicy
          PolicyDocument:
            Version: "2012-10-17"
            Statement:
              - Effect: Allow
                Action:
                  - ec2:Describe*
                  - ec2:AttachVolume
                  - ec2:CreateVolume
                  - ec2:DetachVolume
                  - ec2:CreateSnapshot
                Resource: "*"
              - Effect: Allow
                Action:
                  - s3:Get*
                  - s3:List*
                Resource: "*"
              - Effect: Allow
                Action:
                  - logs:*
                Resource:
                  - arn:aws:logs:*:*:*
      RoleName:
        Ref: BastionHostRoleNameParameter

  BastionHostInstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Path: /
      Roles:
        - Ref: BastionHostRole

  BastionHostSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Bastion Host Security Group
      Tags:
        - Key: Name
          Value:
            Fn::Sub: ${BastionHostSecurityGroupTagNameParameter}
      VpcId:
        Ref: VpcIdParameter

  InboundFromBastionHostSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow SSH Inbound from Bastion Host Security Group
      Tags:
        - Key: Name
          Value:
            Fn::Sub: ${InboundFromBastionHostSecurityGroupTagNameParameter}
      VpcId:
        Ref: VpcIdParameter

  # Allow tcp inbound from Secure Shell Cidr on port 22
  BastionHostSecurityGroupIngress0:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      CidrIp:
        Ref: SecureShellInboundCidrIpParameter
      FromPort: '22'
      GroupId:
        Ref: BastionHostSecurityGroup
      IpProtocol: tcp
      ToPort: '22'

  # Allow tcp outbound on 22 to All AEM Instances 
  BastionHostSecurityGroupEgress0:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      DestinationSecurityGroupId:
        Ref: InboundFromBastionHostSecurityGroup
      FromPort: '22'
      GroupId:
        Ref: BastionHostSecurityGroup
      IpProtocol: tcp
      ToPort: '22'

  # Allow tcp inbound from Bastion Host Security Group on port 22
  InboundFromBastionHostSecurityGroupIngress0:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      SourceSecurityGroupId:
        Ref: BastionHostSecurityGroup
      FromPort: '22'
      GroupId:
        Ref: InboundFromBastionHostSecurityGroup
      IpProtocol: tcp
      ToPort: '22'

  BastionHostLaunchConfiguration:
    Type: AWS::AutoScaling::LaunchConfiguration
    Properties:
      AssociatePublicIpAddress: true
      IamInstanceProfile:
        Ref: BastionHostInstanceProfile
      ImageId:
        Ref: BastionHostImageParameter
      InstanceMonitoring: false
      InstanceType:
        Ref: BastionHostInstanceTypeParameter
      KeyName:
        Ref: ComputeKeyPairNameParameter
      SecurityGroups:
        - Ref: BastionHostSecurityGroup
      # TODO: Setup UserData
      UserData:
        Fn::Base64:
          Fn::Join:
            - ""
            -
              - "#!/bin/bash -x"
              - "\n"
              - "su - ec2-user -c \"echo TODO\""

# TODO: add user data to associate an elastic ip address?

  BastionHostAutoScalingGroup:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      AvailabilityZones:
        Ref: BastionHostASGAvailabilityZoneListParameter
      HealthCheckGracePeriod: 300
      HealthCheckType: EC2
      LaunchConfigurationName:
        Ref: BastionHostLaunchConfiguration
      MaxSize:
        Ref: BastionHostASGMaxSizeParameter
      MinSize:
        Ref: BastionHostASGMinSizeParameter
      Tags:
        - Key: Name
          Value:
            Fn::Sub: ${BastionHostTagNameParameter}
          PropagateAtLaunch: true
        - Key: Component
          Value: aem-stack-bastion-host
          PropagateAtLaunch: true
      VPCZoneIdentifier:
        - Ref: BastionHostSubnetA
        - Ref: BastionHostSubnetB


Outputs:

  BastionHostSubnetA:
    Value: 
      Ref: BastionHostSubnetA
    Description: The Bastion Host Subnet in Availability Zone A

  BastionHostSubnetB:
    Value: 
      Ref: BastionHostSubnetB
    Description: The Bastion Host Subnet in Availability Zone B

  BastionHostInstanceProfile:
    Value:
      Ref: BastionHostInstanceProfile
    Description: The Bastion Host Instance Profile

  BastionHostSecurityGroup:
    Value:
      Ref: BastionHostSecurityGroup
    Description: The Bastion Host Security Group

  InboundFromBastionHostSecurityGroup:
    Value:
      Ref: InboundFromBastionHostSecurityGroup
    Description: The Inbound From Bastion Host Security Group

  BastionHostLaunchConfiguration:
    Value:
      Ref: BastionHostLaunchConfiguration
    Description: The Bastion Host Launch Configuration

  BastionHostAutoScalingGroup:
    Value:
      Ref: BastionHostAutoScalingGroup
    Description: The Bastion Host Auto Scaling Group
